# ironfish-wasm

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
ironfish_wasm/: Cargo.toml
ironfish_wasm/src/: lib.rs
ironfish_wasm/src/ironfish_rust/: mod.rs
ironfish_wasm/src/ironfish_rust/keys/: mod.rs  public_address.rs
ironfish_wasm/src/ironfish_rust/serializing/: mod.rs
ironfish_wasm/src/ironfish_zkp/: util.rs
ironfish_wasm/src/wasm_structs/: assets.rs  ephemeral_key_pair.rs  errors.rs  mod.rs  proof.rs  spend_description.rs  transaction.rs  witness.rs
js/: index.js
node/: main.js
src/: lib.rs
src/ironfish_rust/: errors.rs  mod.rs  note.rs  util.rs
src/ironfish_rust/assets/: asset_identifier.rs  mod.rs
src/ironfish_zkp/: constants.rs
src/wasm_structs/: assets.rs  errors.rs  mod.rs  note.rs  note_encrypted.rs  transaction.rs  witness.rs
