[package]
categories = ["wasm"]
name = "ironfish-wasm"
version = "0.1.0"
edition = "2021"
description = ""

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = {version = "0.4.5", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
jubjub = "0.10"
blake2b_simd = "1.0.0"
blake2s_simd = "1.0.0"
blake3 = "1.3.1"
bls12_381 = { version = "0.8" }
group = "0.13.0"
# zcash_primitives = { git = "https://github.com/iron-fish/librustzcash.git", branch = "blstrs", package = "zcash_primitives" }
# ironfish_rust = { package = "ironfish", git = "https://github.com/iron-fish/ironfish.git"}
# ironfish_rust = { package = "ironfish", path = "../IRONFISH/ironfish-rust"}
# rand_core = { version = "0.6.4", features = ["getrandom"] }
# getrandom = { version = "0.2", optional = true, features = ["js"]}


[dependencies.web-sys]
features = ["console"]
version = "0.3.60"

[dev-dependencies]
js-sys = "0.3.60"

[profile.dev]
debug = true
lto = true
opt-level = 'z'

[profile.release]
debug = false
lto = true
opt-level = 'z'
