[package]
categories = ["wasm"]
name = "ironfish-wasm"
version = "0.1.0"
edition = "2021"
description = ""

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = {version = "0.4.5", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
blst = "=0.3.10"
ironfish_rust = { package = "ironfish", git = "https://github.com/oreoslabs/ironfish-rust" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
getrandom = { version = "0.2", optional = true, features = ["js"]}


[dependencies.web-sys]
features = ["console"]
version = "0.3.60"

[dev-dependencies]
js-sys = "0.3.60"

[profile.dev]
debug = true
lto = true
opt-level = 'z'

[profile.release]
debug = false
lto = true
opt-level = 'z'
