[package]
categories = ["wasm"]
name = "ironfish-wasm"
version = "0.1.0"
edition = "2021"
description = ""

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = {version = "0.4.5", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
blst = "=0.3.10"
ironfish_rust = { package = "ironfish", git = "https://github.com/oreoslabs/ironfish-optimize.git", branch = "feature/support-wasm"}
rand_core = { version = "0.6.4", features = ["getrandom"] }
getrandom = { version = "0.2", optional = true, features = ["js"]}
subtle = "2.4"
hex = "0.4.3"


[dependencies.web-sys]
features = ["console"]
version = "0.3.60"

[dependencies.serde_json]
version = "1"


[dev-dependencies]
js-sys = "0.3.60"
rand = "0.8.5"
ironfish_zkp = { package = "ironfish_zkp", git = "https://github.com/oreoslabs/ironfish-optimize.git", branch = "wasm"}
jubjub = { git = "https://github.com/iron-fish/jubjub.git", branch = "blstrs" }

[profile.dev]
debug = true
lto = true
opt-level = 'z'

[profile.release]
debug = false
lto = true
opt-level = 'z'
